# sampleappofdoom

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  cliff.toml  mise.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  changelog.yml  release-plz.yml
src/: main.rs
